--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ code {
 
 .leaflet-container {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
@@ -97,6 +97,7 @@ code {
   max-width: 400px;
   margin: 0 auto;
   text-align: center;
+  padding: 40px;
   padding-top: 40px;
 }
 .create label {
